Migrate tests to JUnit Jupiter
* Migrate groovy tests to java
* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Minor code cleanup
* Ban JUnit4 imports